crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_033_TaitoTC0190_Bakushou_Jinsei_Gekijou_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-033-TaitoTC0190/Bakushou!! Jinsei Gekijou (Japan).zip
rom_sha256=95855896ba740d5d7859ffd7245ff50e7e950a45d157ec844dd18d9688739f3d
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=e612b5fe40789e71
checkpoint f900 fb_fnv1a64=cfd001efc4932c34
checkpoint f1100 fb_fnv1a64=cfd001efc4932c34
