crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_033_TaitoTC0190_Golfkko_Open_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-033-TaitoTC0190/Golfkko Open (Japan).zip
rom_sha256=ab1560f1c44ae351f879661cb17621697312721d1b3f27ac02541ac60e746ef2
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=9641890cf6032f6e
checkpoint f900 fb_fnv1a64=d895ef416b12cdc2
checkpoint f1100 fb_fnv1a64=2004772e3df8785a
